feat: prevendo com valores novos

--- a/inicial.ipynb
+++ b/inicial.ipynb
@@ -530,11 +530,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Poor', 'Good', 'Good'], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# 5. Usar a nossa IA para definir score de crédito dos clientes"
+    "# 5. Usar a nossa IA para definir score de crédito dos clientes\n",
+    "\n",
+    "tabela_novos_clientes = pd.read_csv('novos_clientes.csv')\n",
+    "\n",
+    "# tratando os dados\n",
+    "tabela_novos_clientes[\"profissao\"] = codificador.fit_transform(tabela_novos_clientes[\"profissao\"])\n",
+    "tabela_novos_clientes[\"mix_credito\"] = codificador.fit_transform(tabela_novos_clientes[\"mix_credito\"])\n",
+    "tabela_novos_clientes[\"comportamento_pagamento\"] = codificador.fit_transform(tabela_novos_clientes[\"comportamento_pagamento\"])\n",
+    "\n",
+    "previsao = modelo_arvorededecisao.predict(tabela_novos_clientes)\n",
+    "display(previsao)\n"
    ]
   }
  ],
