:tada: finalizando projeto

--- a/inicial.ipynb
+++ b/inicial.ipynb
@@ -554,7 +554,10 @@
     "tabela_novos_clientes[\"comportamento_pagamento\"] = codificador.fit_transform(tabela_novos_clientes[\"comportamento_pagamento\"])\n",
     "\n",
     "previsao = modelo_arvorededecisao.predict(tabela_novos_clientes)\n",
-    "display(previsao)\n"
+    "display(previsao)\n",
+    "\n",
+    "# E se viesse com a profissão diferente? O que fazer? Treinar novamente o modelo com a nova profissão\n",
+    "# Como exportar o modelo para usar em produção? - Seria usando o streamlit - https://www.streamlit.io/\n"
    ]
   }
  ],
